Fix overflow on product card gallery

--- a/src/styles/components/cards/product-card.scss
+++ b/src/styles/components/cards/product-card.scss
@@ -10,6 +10,7 @@
   position: relative;
   width: 100%;
   margin-bottom: 11px;
+  overflow: hidden;
 
   .product-card__qv-trigger-wrap {
     position: absolute;
